[workspace]
resolver = "3"
members = [
    "taskette",
    "taskette-utils",
    "taskette-cortex-m",
    "taskette-esp-riscv",
    "tests/qemu",
    "examples/qemu",
    #"examples/rp2040",
    #"examples/rp235x",
    #"examples/esp32c3",
]
exclude = [
    "examples/rp2040",
    "examples/rp235x",
    "examples/esp32c3",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tana/taskette"
repository = "https://github.com/tana/taskette"