[package]
name = "taskette-cortex-m"
edition = "2024"
description = "Multitasking library for embedded Rust (Cortex-M specific part)"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
taskette = { version = "0.1.0", path = "../taskette" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
static_cell = "2.1.1"
