[package]
name = "taskette-utils"
edition = "2024"
description = "Multitasking library for embedded Rust (utility crate)"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
embedded-hal = "1.0.0"
taskette = { version = "0.1.0", path = "../taskette" }
