[package]
name = "taskette"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.1"
log = { version = "0.4.28", optional = true }
portable-atomic = "1.11.1"

[features]
stack-canary = []
log = ["dep:log"]
defmt = ["dep:defmt"]
