[package]
name = "taskette"
edition = "2024"
description = "Multitasking library for embedded Rust (architecture-independent part)"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.1"
log = { version = "0.4.28", optional = true }
portable-atomic = "1.11.1"

[features]
default = ["round-robin"]
stack-canary = []
round-robin = []
log = ["dep:log"]
defmt = ["dep:defmt"]
