[package]
name = "taskette-examples-qemu"
version = "0.1.0"
edition = "2024"

[dependencies]
taskette = { path = "../../taskette" }
taskette-cortex-m = { path = "../../taskette-cortex-m" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
heapless = "0.9.1"
log = "0.4.28"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
static_cell = "2.1.1"