[package]
name = "taskette-examples-qemu"
version = "0.1.0"
edition = "2024"

[dependencies]
taskette = { path = "../../taskette" }
taskette-cortex-m = { path = "../../taskette-cortex-m" }
taskette-utils = { path = "../../taskette-utils" }
rp235x-hal = { version = "0.3.0", features = ["critical-section-impl"] }
cortex-m = "0.7.7"
panic-halt = "1.0.0"
static_cell = "2.1.1"
embedded-hal = "1.0.0"
defmt-rtt = "1.1.0"
defmt = "1.0.1"
usb-device = { version = "0.3.2", features = ["defmt"] }
usbd-serial = "0.2.2"
