[package]
name = "taskette-tests-qemu"
version = "0.1.0"
edition = "2024"

[[test]]
name = "register_saving"
harness = false

[[test]]
name = "preemption"
harness = false

[[test]]
name = "fpu"
harness = false

[[test]]
name = "futex"
harness = false

[[test]]
name = "park_unpark"
harness = false

[[test]]
name = "block_on"
harness = false

[dependencies]
taskette = { path = "../../taskette" }
taskette-cortex-m = { path = "../../taskette-cortex-m" }
taskette-utils = { path = "../../taskette-utils" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
static_cell = "2.1.1"
heapless = "0.9.2"
critical-section = "1.2.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
